artifacts/step38-admin-ui/20260226-124436/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: osdu-core:/Service:osdu-core/osdu-admin-ui
  creationTimestamp: "2026-02-26T04:54:40Z"
  name: osdu-admin-ui
  namespace: osdu-core
  resourceVersion: "15525075"
  uid: 16c229d5-1167-4695-a411-6554c21998eb
spec:
  clusterIP: 10.109.187.65
  clusterIPs:
  - 10.109.187.65
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: osdu-admin-ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
